--- a/src/components/YourTasks/YourTask.scss
+++ b/src/components/YourTasks/YourTask.scss
@@ -1,5 +1,5 @@
-@import "../variables.scss";
-@import "../mixins.scss";
+@import "../../scss/variables.scss";
+@import "../../scss/mixins.scss";
 
 .no-match {
     text-align: center;
