--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,14 +1,18 @@
 @import "./variables.scss";
 
+@mixin basic-btn {
+    cursor: pointer;
+    outline: none;
+    border: none;
+}
+
 @mixin btn-set {
     background-color: transparent;
     border-radius: 50%;
     color: $main-font-color;
-    outline: none;
     padding: 5px;
     margin-left: 5px;
-    cursor: pointer;
-    border: none;
+    @include basic-btn;
     transition: background-color 0.3s ease-in-out, padding 0.4s ease;
 
     &:hover,
@@ -26,6 +30,7 @@
     outline: none;
     color: $main-font-color;
     margin-top: $marginTop;
+    width: 100%;
 
     &:hover,
     &:focus {
