--- a/src/components/EditTask/EditTask480px.scss
+++ b/src/components/EditTask/EditTask480px.scss
@@ -1,3 +1,5 @@
-.edit-section {
-    justify-content: center;
+@media (max-width:480px) {
+    .edit-section {
+        justify-content: center;
+    }
 }
