--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,5 +1,4 @@
 @import './variables.scss';
-@import "./scssComponents/responsive480px.scss";
 
 * {
   box-sizing: border-box;
@@ -26,4 +25,10 @@ body {
 
 #root {
   width: 100%;
+}
+
+@media (max-width:480px) {
+  html {
+    font-size: 14px;
+  }
 }
